ATLAS-1205 Improve atlas build time (shwethags)